--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,5 +1,5 @@
 /* --------------------------------------------------------------------------------------------------------- 
-FluidFox - Default is a Fork of the Fluidfox Repository found at https://github.com/dannycandle/FluidFox, 
+FluidFox - Proton is a Fork of the Fluidfox Repository found at https://github.com/dannycandle/FluidFox, 
 Code and Artwork was provided by Daniel Candelaria. This code is provided As-is and may or may not be updated
 
 *Transparency effects only availble on MacOS
