--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -5,7 +5,7 @@ Edited, compiled, and maintained by Jack Hannon
 --------------------------------------------------------------------------------------------------------- */
 
 /* Theme information
-Theme Name: Fluidfox Proton
+Theme Name: Atom for Firefox
 Author: Jack Hannon
 Platform: macOS
 Firefox Versions: 102+
@@ -210,4 +210,3 @@ Firefox Versions: 102+
 /*  --------------  */
  /* | Experimental | */
  /*  --------------  */
-
