--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: light) {
   :root {
-    --backgroundpic: url(FF-Blur-light.png);
+    --backgroundpic: url(FF-Blur-Light.png);
   }
 }
 
