Marked Full Screen Mode as experimental

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -211,7 +211,7 @@ Firefox Versions: 102+
   transition: opacity 0.15s ease;
 }
 
-/*Full Screen Warning*/
+/* Full Screen Warning */
 #fullscreen-warning{
     background-color: rgba(25,25,25) !important;
     border-color: rgb(20,20,20) !important;
@@ -226,20 +226,6 @@ Firefox Versions: 102+
     font-size: 15px !important;
     color: rgb(255,255,255) !important;
     text-shadow: none !important;
-}
-/* Disabling Transparency in Full Screen */
-#navigator-toolbox[inFullscreen="true"] #nav-bar{
-    background-color: rgba(25,25,25) !important;
- }
-#navigator-toolbox[inFullscreen="true"] .tab-background[selected],
- .tab-background[multiselected="true"] {	
-    background: rgba(25,25,25) !important;
-}
-#navigator-toolbox[inFullscreen="true"]  :root:-moz-window-inactive #navigator-toolbox {
-   -moz-appearance: -moz-mac-source-list !important;
-}
-#TabsToolbar[inFullscreen="true"]{
-  background: #242424 !important;
 }
 
 /* Uncomment to Hide tabs bar for Tree style tabs (Credit u/jfgxyz on Reddit) */
@@ -261,6 +247,21 @@ hbox#nav-bar-customization-target {
  /* |⚠️ Experimental ⚠️| */
  /*  ------------------  */
 
+/* Disabling Transparency in Full Screen (Dark mode Only for Right Now)*/
+/* #navigator-toolbox[inFullscreen="true"] #nav-bar{
+    background-color: rgba(25,25,25) !important;
+ }
+#navigator-toolbox[inFullscreen="true"] .tab-background[selected],
+ .tab-background[multiselected="true"] {	
+    background: rgba(25,25,25) !important;
+}
+#navigator-toolbox[inFullscreen="true"]  :root:-moz-window-inactive #navigator-toolbox {
+   -moz-appearance: -moz-mac-source-list !important;
+}
+#TabsToolbar[inFullscreen="true"]{
+  background: #242424 !important;
+}
+----------
 /* For use with TreeStleTabs (Experimental, funtionality Limited)
 /* #sidebar-box
 {
