--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -376,8 +376,8 @@ hbox#nav-bar-customization-target {
    display: none !important;
 }
 
-*/
-:root #nav-bar,
+
+*/:root #nav-bar,
 #PersonalToolbar,
 #titlebar,
 .tab-background[selected="true"] 
